--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -7,13 +7,13 @@
 <div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ url_for('static', filename='images/carousels/index/1.png') }}" class="d-block w-100" alt="Learn English Online - Anywhere, distance is not a limit">
+      <img src="{{ url_for('static', filename='images/carousels/index/1.png') }}" class="d-block w-100" alt="Learn English Online">
     </div>
     <div class="carousel-item">
-      <img src="{{ url_for('static', filename='images/carousels/index/2.png') }}" class="d-block w-100" alt="Group Classes - Customized and individual feedback">
+      <img src="{{ url_for('static', filename='images/carousels/index/2.png') }}" class="d-block w-100" alt="Group Classes">
     </div>
     <div class="carousel-item">
-      <img src="{{ url_for('static', filename='images/carousels/index/3.png') }}" class="d-block w-100" alt="Communicative Method - Interactive classes">
+      <img src="{{ url_for('static', filename='images/carousels/index/3.png') }}" class="d-block w-100" alt="Communicative Method">
     </div>
     <div class="carousel-item">
       <img src="{{ url_for('static', filename='images/carousels/index/4.png') }}" class="d-block w-100" alt="Daily Vocabulary - Review class summaries">
@@ -28,4 +28,35 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+{# Cards #}
+<div class="row my-5">
+  <div class="col-md-4">
+    <div class="card" style="width: 18rem;">
+      <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top" alt="We care about you">
+      <div class="card-body">
+        <h5 class="text-center">We care about you</h5>
+        <p class="card-text text-center">That is why we have customized and individual feedback.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card" style="width: 18rem;">
+      <img src="{{ url_for('static', filename='images/cards/index/2.png') }}" class="card-img-top" alt="Have fun while learning">
+      <div class="card-body">
+        <h5 class="text-center">Learn while having fun</h5>
+        <p class="card-text text-center">Enjoy our interactive classes. In the end, English will be fun.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card" style="width: 18rem;">
+      <img src="{{ url_for('static', filename='images/cards/index/3.png') }}" class="card-img-top" alt="The world is in your hands">
+      <div class="card-body">
+        <h5 class="text-center">Distance is not a limit</h5>
+        <p class="card-text text-center">Learn from anywhere with live classes.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<h3 class="text-center">Study in Blueberry School now!</h3>
 {% endblock %}
