--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -31,7 +31,7 @@
 {# Cards #}
 <div class="row my-5">
   <div class="col-md-4">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top" alt="We care about you">
       <div class="card-body">
         <h5 class="text-center">We care about you</h5>
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="col-md-4">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="{{ url_for('static', filename='images/cards/index/2.png') }}" class="card-img-top" alt="Have fun while learning">
       <div class="card-body">
         <h5 class="text-center">Learn while having fun</h5>
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div class="col-md-4">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="{{ url_for('static', filename='images/cards/index/3.png') }}" class="card-img-top" alt="The world is in your hands">
       <div class="card-body">
         <h5 class="text-center">Distance is not a limit</h5>
