--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 {# Carousel #}
-<div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" display: flex>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="{{ url_for('static', filename='images/carousels/index/1.png') }}" class="d-block w-100" alt="Learn English Online">
@@ -29,32 +29,26 @@
   </button>
 </div>
 {# Cards #}
-<div class="row my-5">
-  <div class="col-md-4">
-    <div class="card">
-      <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top" alt="We care about you">
-      <div class="card-body">
-        <h5 class="text-center">We care about you</h5>
-        <p class="card-text text-center">That is why we have customized and individual feedback.</p>
-      </div>
+<div class="card-group my-4" display: flex>
+  <div class="card">
+    <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top img-fluid d-none d-sm-block" alt="We care about you">
+    <div class="card-body">
+      <h5 class="text-center">We care about you</h5>
+      <p class="card-text text-center">That is why we have customized and individual feedback.</p>
     </div>
   </div>
-  <div class="col-md-4">
-    <div class="card">
-      <img src="{{ url_for('static', filename='images/cards/index/2.png') }}" class="card-img-top" alt="Have fun while learning">
-      <div class="card-body">
-        <h5 class="text-center">Learn while having fun</h5>
-        <p class="card-text text-center">Enjoy our interactive classes. In the end, English will be fun.</p>
-      </div>
+  <div class="card">
+    <img src="{{ url_for('static', filename='images/cards/index/2.png') }}" class="card-img-top img-fluid d-none d-sm-block" alt="Have fun while learning">
+    <div class="card-body">
+      <h5 class="text-center">Learn while having fun</h5>
+      <p class="card-text text-center">Enjoy our interactive classes. In the end, English will be fun.</p>
     </div>
   </div>
-  <div class="col-md-4">
-    <div class="card">
-      <img src="{{ url_for('static', filename='images/cards/index/3.png') }}" class="card-img-top" alt="The world is in your hands">
-      <div class="card-body">
-        <h5 class="text-center">Distance is not a limit</h5>
-        <p class="card-text text-center">Learn from anywhere with live classes.</p>
-      </div>
+  <div class="card">
+    <img src="{{ url_for('static', filename='images/cards/index/3.png') }}" class="card-img-top img-fluid d-none d-sm-block" alt="The world is in your hands">
+    <div class="card-body">
+      <h5 class="text-center">Distance is not a limit</h5>
+      <p class="card-text text-center">Learn from anywhere with live classes.</p>
     </div>
   </div>
 </div>
