--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -29,7 +29,7 @@
   </button>
 </div>
 {# Cards #}
-<div class="card-group my-4" display: flex>
+<div class="card-group my-4">
   <div class="card">
     <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top d-none d-sm-block" alt="We care about you">
     <div class="card-body">
